fix: align tab text center

--- a/app/styles/user-settings.scss
+++ b/app/styles/user-settings.scss
@@ -163,11 +163,11 @@
       z-index: 1;
   
       & > li {
-        width: 20%;
+        width: 18%;
         float: none;
         display: inline-block;
         vertical-align: bottom;
-        text-align: left;
+        text-align: center;
         font-weight: bold;
         border-bottom: 2px solid $grey-400;
   
